--- a/src/components/app/app.module.scss
+++ b/src/components/app/app.module.scss
@@ -1,3 +1,4 @@
+//Generalities////////////////////////////////
 body {
   font-family: var(--mainFont);
   font-size: var(--mainFontSize);
@@ -43,7 +44,6 @@ p{
 }
 
 li{
-  // list-style: inside !important;
   color:var(--cream);
 }
 
