--- a/src/components/Pages/Profil/profil.module.scss
+++ b/src/components/Pages/Profil/profil.module.scss
@@ -10,7 +10,7 @@ text-align: center;
     }
 .card{
     width:50%;
-    border: .3rem dashed #cfb84e;
+    border: .3rem dashed var(--yellow);
     border-radius: 1rem;
     margin: 1rem;
 }
