--- a/src/components/Pages/Home/home.module.scss
+++ b/src/components/Pages/Home/home.module.scss
@@ -10,9 +10,11 @@
   border-radius: 2rem;
   margin:2rem 0;
   padding: 2rem 0;
+  transition: all .4s ease-in-out;
 }
 .homeArticle:hover{
   background-color: var(--cream);
+  transform: scale(1.1);
 }
 .homeArticle:hover p, .homeArticle:hover h3{
   color: var(--black);
