--- a/src/components/Pages/Login/form.module.scss
+++ b/src/components/Pages/Login/form.module.scss
@@ -31,7 +31,7 @@
 //personnaliser l'apparence d'un élément <input> lorsqu'il est en focus, en supprimant la bordure et en modifiant la couleur de fond.
 input:focus{
     outline: none;
-    background-color: #35756C;
+    background-color: var(--green);
 }
 
 label{
